--- a/package.json
+++ b/package.json
@@ -55,10 +55,5 @@
 	"browserify-shim": {
 		"jquery": "$"
 	},
-	"license": "GPL-3.0",
-	"dependencies": {
-		"react-redux": "^5.0.7",
-		"redux": "^4.0.0",
-		"redux-thunk": "^2.2.0"
-	}
+	"license": "GPL-3.0"
 }
