--- a/src/front/.babelrc
+++ b/src/front/.babelrc
@@ -1,5 +1,9 @@
 {
     "presets": [
         "env","react"
+    ],
+    "plugins": [
+        "transform-es2015-destructuring",
+        "transform-object-rest-spread"
     ]
 }
