--- a/src/front/package.json
+++ b/src/front/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
@@ -31,7 +33,10 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-share": "^2.1.1"
+    "react-share": "^2.1.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   }
 }
