--- a/package.json
+++ b/package.json
@@ -1,59 +1,90 @@
 {
-	"name": "mbwp-plugin",
-	"version": "1.0.0",
-	"description": "Wordpress Plugin creates 3 extra places for ads, one on top of the website and two on each side.",
-	"author": "Tihomir Selak (https://motionbunmp.com)",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Tihi321/mbwp-banners"
-	},
-	"keywords": [
-		"wordpress",
-		"plugin",
-		"PHP",
-		"composer",
-		"gulp",
-		"es6",
-		"scss"
-	],
-	"devDependencies": {
-		"babel-core": "^6.26.0",
-		"babel-preset-env": "^1.6.1",
-		"babelify": "^8.0.0",
-		"browser-sync": "^2.18.13",
-		"browserify": "^14.5.0",
-		"browserify-shim": "^3.8.14",
-		"gulp": "^3.9.1",
-		"gulp-autoprefixer": "^4.0.0",
-		"gulp-concat": "^2.5.2",
-		"gulp-if": "^2.0.2",
-		"gulp-notify": "^3.0.0",
-		"gulp-options": "^1.1.1",
-		"gulp-plumber": "^1.1.0",
-		"gulp-rename": "^1.2.0",
-		"gulp-sass": "^3.1.0",
-		"gulp-sourcemaps": "^2.6.1",
-		"gulp-strip-debug": "^1.1.0",
-		"gulp-uglify": "^3.0.0",
-		"gulp-uglifycss": "^1.0.9",
-		"vinyl-buffer": "^1.0.0",
-		"vinyl-source-stream": "^1.1.0"
-	},
-	"babel": {
-		"presets": [
-			"env"
-		]
-	},
-	"browserify": {
-		"transform": [
-			"browserify-shim"
-		]
-	},
-	"browser": {
-		"jquery": "./node_modules/jquery/dist/jquery.js"
-	},
-	"browserify-shim": {
-		"jquery": "$"
-	},
-	"license": "GPL-3.0"
+  "name": "top_bar",
+  "version": "1.0.0",
+  "author": "Tihomir Selak",
+  "private": true,
+  "main": "",
+  "scripts": {
+    "__stylelintPlugin": "stylelint \"skin/**/*.scss\" --syntax scss",
+    "__eslintPlugin": "eslint skin/assets/",
+    "precommitCss": "npm run __stylelintPlugin",
+    "precommitJs": "npm run __eslintPlugin",
+    "precommit": "npm run precommitJs && npm run precommitCss",
+    "precommitPhp": "phpcs --standard=vendor/infinum/coding-standards-wp/Infinum inc",
+    "autofixPhp": "phpcbf --standard=vendor/infinum/coding-standards-wp/Infinum inc",
+    "start": "webpack --progress --watch --display-error-details --display-reasons",
+    "build": "NODE_ENV=production webpack --progress"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-react-jsx": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@infinumjs/eslint-config": "^1.1.0",
+    "@infinumjs/stylelint-config": "^1.0.0",
+    "@wordpress/babel-plugin-import-jsx-pragma": "^1.1.2",
+    "@wordpress/babel-plugin-makepot": "^2.0.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.24.6",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-config-wordpress": "^2.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jest": "^21.6.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-wordpress": "^0.1.0",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^1.1.11",
+    "imports-loader": "^0.8.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^2.1.6",
+    "precss": "^3.1.2",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "stylelint": "^9.4.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-manifest-plugin": "^2.0.3"
+  },
+  "dependencies": {
+    "@tinymce/tinymce-react": "^2.3.0",
+    "autoprefixer": "^9.0.1",
+    "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.0.4",
+    "emotion": "^9.2.6",
+    "filesize": "^3.5.11",
+    "himalaya": "^1.1.0",
+    "html-react-parser": "^0.4.7",
+    "media-blender": "^2.1.0",
+    "postcss-font-magician": "^2.2.1",
+    "prompt-sync": "^4.1.6",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-responsive-embed": "^2.1.0",
+    "react-router-dom": "^5.0.0",
+    "react-select": "^2.1.2",
+    "react-share": "^2.4.0",
+    "react-transition-group": "^2.6.0"
+  },
+  "browserslist": [
+    "android >= 4.2",
+    "not ie < 11",
+    "last 2 versions",
+    "Safari >= 8"
+  ]
 }
