--- a/.babelrc
+++ b/.babelrc
@@ -46,7 +46,7 @@
     [
       "@wordpress/babel-plugin-makepot",
       {
-        "output": "languages/quizess_js.pot"
+        "output": "languages/mb-topbar__js.pot"
       }
     ],
     [
