--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "react-router-dom": "^5.0.0",
     "react-select": "^2.1.2",
     "react-share": "^2.4.0",
-    "react-transition-group": "^2.6.0"
+    "react-transition-group": "^2.6.0",
+    "wp-pot": "^1.7.0"
   },
   "browserslist": [
     "android >= 4.2",
