--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "precommitPhp": "phpcs --standard=vendor/infinum/coding-standards-wp/Infinum inc",
     "autofixPhp": "phpcbf --standard=vendor/infinum/coding-standards-wp/Infinum inc",
     "start": "webpack --progress --watch --display-error-details --display-reasons",
-    "build": "NODE_ENV=production webpack --progress"
+    "build": "NODE_ENV=production webpack --progress",
+    "translate": "node wp-pot.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
