--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@tinymce/tinymce-react": "^2.3.0",
     "autoprefixer": "^9.0.1",
     "babel-polyfill": "^6.26.0",
+    "chroma-js": "^2.0.3",
     "classnames": "^2.2.6",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.0.4",
@@ -78,7 +79,7 @@
     "react-dom": "^16.6.3",
     "react-responsive-embed": "^2.1.0",
     "react-router-dom": "^5.0.0",
-    "react-select": "^2.1.2",
+    "react-select": "^2.4.2",
     "react-share": "^2.4.0",
     "react-transition-group": "^2.6.0",
     "vanilla-picker": "^2.7.2",
